	* Bugfix: Checkbox had problem with default value
	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
	* Bugfix: XML entities were encoded inside of dwoo tags which caused parse error in template engine (dwoo)
	* Added: Cropping for database relation labels in form
	* Added TodoyuTime::time() to set null values to current time
	* Added TodoyuDateRange
	* Added TodoyuArray::createMap()
	* Added: action dispatcher error output contains now also action controller class name
	* Added: Wrappers for rename() and copy() in TodoyuFileManager
	* Added: TodoyuTime:: getYearEnd(), getYearStart()
	* Added: update() and updateField()
	* Added: Default link to documentation
	* Added: Comparisom form validators (dateBefore, dateAfter, dateNotAfter, dateTimeNotBefore, dateTimeAfter, equals) can optionally compare against a value
	* Changed: Don't require system locale data to set a locale for translation
	* Changed: TodoyuDebug handles now debugging status
	* Changed: Format of duration (hour)
	* Changed: Duration formatting
	* Removed: Moved continuous integration files to private extension
	* Removed: Username list from debug function. Were never used
	* Removed: Color styles for project (moved to project)
	* Translation: Added polish translation for core
	* Translation: Serbian translation for installer
	* Translation: Polish for core (and all basic extensions)


core 2.1.2 - 2011-09-15
	* Bugfix: Tab layout for chrome fixed
	* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrome (ex: view/edit event)
	* Bugfix: fixed various button icons positions for Chrome
	* Bugfix: #123 Text form fields are ignoring defined default values
	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8